fix image cropping issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,3 @@
-.jumbotron {
-  margin: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
 p:first-child{
   font-weight: bold;
   font-size: 115%;
@@ -12,4 +6,7 @@ p:first-child{
 img {
   float: right;
   height: 200px;
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
 }
